--- a/public/index.html
+++ b/public/index.html
@@ -19,18 +19,18 @@
     <link rel="icon" href="/favicon.ico">
 	<title><%= VUE_APP_TITLE %></title>
 
-	<meta name="description" content="COVID-19 Η εξάπλωση της νόσου στην Ελλάδα και στον κόσμο" />
+	<meta name="description" content="COVID-19 Η εξάπλωση της νόσου στην Ελλάδα." />
 
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:site" content="@iMEdDLab" />
 	<meta name="twitter:creator" content="@iMEdDLab" />
-	<meta name="twitter:description" content="Η εξάπλωση της νόσου στην Ελλάδα και στον κόσμο"/>
+	<meta name="twitter:description" content="Η εξάπλωση της νόσου στην Ελλάδα."/>
 	<meta property="twitter:image" content="https://lab.imedd.org/iframes/covid_graphics/cover_lab.jpg" />
 
 	<meta property="og:url" content="https://lab.imedd.org/covid19/" />
 	<meta property="og:title" content="<%= VUE_APP_TITLE %>" />
 	<meta property="og:type" content="website" />
-	<meta property="og:description" content="Η εξάπλωση της νόσου στην Ελλάδα και στον κόσμο" />
+	<meta property="og:description" content="Η εξάπλωση της νόσου στην Ελλάδα." />
 	<meta property="og:image" content="https://lab.imedd.org/iframes/covid_graphics/cover_lab.jpg" />
 
 	<link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png">
@@ -42,7 +42,7 @@
   </head>
   <body>
     <noscript>
-      <strong><%= htmlWebpackPlugin.options.title %> Η εξάπλωση της νόσου στην Ελλάδα και στον κόσμο.</strong>
+      <strong><%= htmlWebpackPlugin.options.title %> Η εξάπλωση της νόσου στην Ελλάδα.</strong>
     </noscript>
 	<div id="app"></div>
 	<!-- built files will be auto injected -->
